service.yml
apiVersion: v1
kind: Service
metadata:
  name: ekart-servicee
  labels:
    app: ekartt
spec:
  type: ClusterIP
  selector:
    app: ekartt
  ports:
    - port: 80
      targetPort: 8080
