ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
 name: ekart-ingress
 annotations:
  nginx.ingress.kubernetes.io/rewrite-target: /
spec:
 ingressClassName: nginx
 rules:
  - http:
     paths:
       - path: /app
         pathType: Prefix
         backend:
           service:
             name: ekart-servicee
             port:
              number: 80
